--- a/styles.css
+++ b/styles.css
@@ -2672,98 +2672,28 @@ input, select, textarea {
 			transform: scale(1.05);
 		}
 
-
 /* Video */
 
 .video {
-    border: 0;
-    display: inline-block;
-    position: relative;
-}
-
-    .video video {
-        display: block;
-    }
-
-    .video.left, .video.right {
-        max-width: 40%;
-    }
-
-        .video.left video, .video.right video {
-            width: 100%;
-        }
-
-    .video.left {
-        float: left;
-        margin: 0 2rem 2rem 0;
-        top: 0.75rem;
-    }
-
-    .video.right {
-        float: right;
-        margin: 0 0 2rem 2rem;
-        top: 0.75rem;
-    }
-
-    .video.fit {
-        display: block;
-        margin: 2.5rem 0;
-        width: 100%;
-    }
-
-        .video.fit:first-child {
-            margin-top: 0;
-        }
-
-        .video.fit video {
-            width: 100%;
-        }
-
-    .video.main {
-        display: block;
-        margin: 4rem 0;
-        width: 100%;
-    }
-
-        .video.main:first-child {
-            margin-top: 0;
-        }
-
-        .video.main video {
-            width: 100%;
-        }
-
-    @media screen and (max-width: 736px) {
-
-        .video.fit {
-            margin: 2rem 0;
-        }
-
-        .video.main {
-            margin: 2rem 0;
-        }
-
-    }
-
-a.video {
-    overflow: hidden;
-}
-
-    a.video video {
-        -moz-transition: -moz-transform 0.2s ease-out;
-        -webkit-transition: -webkit-transform 0.2s ease-out;
-        -ms-transition: -ms-transform 0.2s ease-out;
-        transition: transform 0.2s ease-out;
-    }
-
-    a.video:hover video {
-        -moz-transform: scale(1.05);
-        -webkit-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-        transform: scale(1.05);
-    }
-
-
+	display: block;
+	margin: 2.5rem 0;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+  }
+  
+  .video video {
+	display: block;
+	width: 100%;
+	height: auto;
+  }
+  
+  @media screen and (max-width: 736px) {
+	.video {
+	  margin: 2rem 0;
+	}
+  }
+  
 /* Actions */
 
 	ul.actions {
@@ -3322,11 +3252,11 @@ a.video {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("bg.jpg");
-			background-size: auto,								auto,														100% auto;
-			background-position: center,								center,														top center;
-			background-repeat: repeat,								no-repeat,													no-repeat;
-			background-attachment: scroll,								scroll,														scroll;
+			background-image: url(), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("bg.jpg");
+			background-size: auto, auto, 100% auto;
+			background-position: center, center, top center;
+			background-repeat: repeat, no-repeat, no-repeat;
+			background-attachment: scroll, scroll, scroll;
 			z-index: -1;
 		}
 
@@ -3364,7 +3294,7 @@ a.video {
 		@media screen and (orientation: portrait) {
 
 			#wrapper > .bg {
-				background-size: auto,								auto,														auto 175%;
+				background-size: auto,								auto,														auto 80%;
 			}
 
 		}
