--- a/styles.css
+++ b/styles.css
@@ -2693,7 +2693,23 @@ input, select, textarea {
 	  margin: 2rem 0;
 	}
   }
+
+/* Calendly */
+
+#calendlyEmbedContainer {
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
   
+  #calendlyEmbedContainer iframe {
+	width: 100%;
+	height: 100%;
+  }
+
 /* Actions */
 
 	ul.actions {
